--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -14,21 +14,39 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@firebase/app": "^0.10.5",
+    "@firebase/auth": "^1.7.4",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/auth": "^20.0.0",
+    "@react-native-firebase/database": "^20.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@types/firebase": "^3.2.1",
+    "@types/react-redux": "^7.1.33",
+    "axios": "^1.7.2",
     "expo": "~50.0.17",
+    "expo-build-properties": "^0.12.1",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-module-autolinking": "^0.0.0",
     "expo-router": "~3.4.10",
+    "expo-sample-pedometer": "^0.2.0",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.12.2",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.2",
+    "redux-saga": "^1.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
